# pyVergeOS

./: .editorconfig  .gitignore  CLA.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: Makefile  authentication.rst  changelog.rst  conf.py  contributing.rst  error_handling.rst  filtering.rst  index.rst  migration.rst  quickstart.rst  requirements.txt  troubleshooting.rst  tutorials.rst
docs/api/: client.rst  exceptions.rst  resources.rst
docs/plans/: 2026-02-05-dns-views-design.md  2026-02-05-fix-vm-snapshot-endpoint-design.md  2026-02-11-fix-issues-37-38-39-design.md
examples/: CreateVM.py  README.md  api_keys_example.py  billing_csv_example.py  catalog_example.py  certificate_example.py  cloud_snapshots_example.py  connection_example.py  dns_example.py  gpu_passthrough_example.py  groups_example.py  nas_advanced.py  nas_simple.py  nas_volume_sync.py  network_example.py  permissions_example.py  recipe_example.py  routing_example.py  site_syncs_example.py  snapshot_profiles_example.py  storage_example.py  system_example.py  tag_management_example.py  task_automation_example.py  tenant_management.py  tenant_monitoring_example.py  user_management_example.py  users_example.py  vm_example.py  vm_import_export_example.py  vm_lifecycle.py  vm_snapshots_example.py  wireguard_example.py
pyvergeos/: __init__.py  __version__.py  client.py  connection.py  constants.py  exceptions.py  filters.py
pyvergeos/models/: __init__.py
pyvergeos/resources/: __init__.py  alarms.py  aliases.py  api_keys.py  auth_sources.py  base.py  billing.py  catalogs.py  certificates.py  cloud_snapshots.py  cloudinit_files.py  cluster_tiers.py  clusters.py  devices.py  diagnostics.py  dns.py  dns_views.py  drives.py  files.py  gpu.py  groups.py  hosts.py  ipsec.py  lldp.py  logs.py  machine_stats.py  nas.py  nas_antivirus.py  nas_cifs.py  nas_nfs.py  nas_services.py  nas_users.py  nas_volume_browser.py  nas_volume_syncs.py  nas_volumes.py  network_stats.py  networks.py  nic_stats.py  nics.py  node_memory.py  (+42 more)
pyvergeos/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_alarms.py  test_aliases.py  test_api_keys.py  test_auth_sources.py  test_billing.py  test_catalogs.py  test_certificates.py  test_cloud_snapshots.py  test_cloudinit_files.py  test_cluster_tiers.py  test_clusters.py  test_connection.py  test_dns_integration.py  test_dns_views_integration.py  test_files.py  test_gpu.py  test_groups.py  test_hosts.py  test_ipsec.py  test_logs.py  test_machine_stats.py  test_nas_antivirus.py  test_nas_cifs.py  test_nas_nfs.py  test_nas_volume_syncs.py  test_nas_volumes.py  test_network_diagnostics.py  test_network_stats.py  test_networks.py  test_node_queries_detailed.py  test_nodes.py  test_oidc_applications.py  test_permissions.py  (+23 more)
(+84 files in other folders)
