[project]
name = "pyvergeos"
version = "0.1.0"
description = "Python SDK for the VergeOS REST API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Verge.io", email = "support@verge.io" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["vergeos", "verge", "virtualization", "api", "sdk", "cloud"]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
async = [
    "httpx>=0.24.0",
]
pydantic = [
    "pydantic>=2.0",
]
all = [
    "httpx>=0.24.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/verge-io/pyvergeos"
Documentation = "https://github.com/verge-io/pyvergeos#readme"
Repository = "https://github.com/verge-io/pyvergeos"
Issues = "https://github.com/verge-io/pyvergeos/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyvergeos"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "types-requests>=2.28",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pyvergeos"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests requiring live VergeOS (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["pyvergeos"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
